# susee-streams-poc

./: .dockerignore  .gitignore  Cargo.toml  README.md  create-pdf-from-readme-files.sh  docker-compose.yml
app-srv-connector-mock/: Cargo.toml  README.md
app-srv-connector-mock/src/: cli.rs  main.rs
docker/: Dockerfile  README.md
inx-collector/: README.md  docker-compose.patch  docker-compose.priv_tangle.patch  env.hornet.example  setup-private-tangle.sh
iota-bridge/: Cargo.toml  README.md
iota-bridge/src/: cli.rs  main.rs
iota-client-types/: Cargo.toml  README.md
iota-client-types/src/: lib.rs
management-console/: Cargo.toml  README.md  message-explorer-openapi.json
management-console/src/: cli.rs  main.rs  multi_channel_management.rs  multiple_sensor_init.rs
sensor/main-idf/components/rustlib/: CMakeLists.txt  Cargo.toml  build.rs  streams_poc_lib.h
sensor/main-idf/components/rustlib/src/: lib.rs
sensor/main-rust/: Cargo.toml
sensor/main-rust-esp-r/: .gdbinit  Cargo.toml  sdkconfig.debug  sdkconfig.defaults  sdkconfig.defaults.esp32c3  workspace.code-workspace
sensor/main-rust-esp-r/.cargo/: config.toml
sensor/main-rust-esp-r/src/: main.rs
sensor/main-rust-esp-rs/: .gdbinit  Cargo.toml  README.md  partitions.csv  sdkconfig.debug  sdkconfig.defaults  workspace.code-workspace
sensor/main-rust-esp-rs/.cargo/: config.toml
sensor/main-rust-esp-rs/src/: main.rs
sensor/main-rust-pio/: .gitignore  Cargo.toml  platformio.ini  platformio.ini.bak
sensor/main-rust-pio/.cargo/: config.toml
sensor/main-rust-pio/src/: lib.rs
sensor/main-rust/src/: main.rs
sensor/sensor-lib/: Cargo.toml
sensor/sensor-lib/src/: command_fetcher.rs  lib.rs  request_via_buffer_cb.rs  streams_poc_lib_api_types.rs
sensor/sensor-lib/src/esp_r/: cli.rs  http_client_smol_esp_rs.rs  main.rs  mod.rs  vfs_fat_fs_tools.rs  wifi_utils.rs
sensor/sensor-lib/src/esp_rs/: client_data_persistence.rs  command_fetcher.rs  command_fetcher_buffer_cb.rs  command_fetcher_socket.rs  esp32_subscriber_tools.rs  esp32_vfs_fat_handle.rs  http_client_smol_esp_rs.rs  hyper_esp_rs_tools.rs  lorawan_rest_client.rs  main.rs  mod.rs  streams_poc_lib.rs  streams_transport_socket_esprs.rs  streams_transport_via_buffer_cb.rs  vfs_fat_fs_tools.rs  wifi_utils.rs
sensor/sensor-lib/src/esp_rs/streams_poc_lib/: api_types.rs  http_client_lorawan.rs  http_client_via_buffer_cb.rs  lib.rs  mod.rs
sensor/sensor-lib/src/std/: cli.rs  client_data_persistence_std.rs  command_fetcher.rs  main.rs  mod.rs  remote_manager.rs  sensor_manager.rs
sensor/streams-poc-lib/components/streams-poc-lib/: CMakeLists.txt  Cargo.toml  README.md  build.rs
sensor/streams-poc-lib/components/streams-poc-lib/include/: streams_poc_lib.h
sensor/streams-poc-lib/components/streams-poc-lib/lib/: README.md
sensor/streams-poc-lib/components/streams-poc-lib/src/: lib.rs
sensor/streams-poc-lib/main/: CMakeLists.txt  main.c
streams-tools/: Cargo.toml
streams-tools/src/: channel_manager.rs  dao_helpers.rs  dummy_wallet.rs  file_stream_client.rs  helpers.rs  lib.rs  lorawan_rest_helpers.rs  plain_text_wallet.rs  subscriber_manager.rs  test_helpers.rs  threading_helpers.rs
streams-tools/src/binary_persist/: README.md  binary_persist.rs  binary_persist_command.rs  binary_persist_confirmation.rs  binary_persist_iota_bridge_req.rs  binary_persist_tangle.rs  mod.rs
streams-tools/src/client/: capture_client.rs  client_base.rs  file_stream_client.rs  http_client.rs  mod.rs
streams-tools/src/client/http/: binary_persist.rs  binary_persist_command.rs  binary_persist_confirmation.rs  binary_persist_tangle.rs  binary_persistence.rs  http_client_proxy.rs  http_protocol.rs  http_protocol_command.rs  http_protocol_confirm.rs  http_protocol_streams.rs  http_protocol_tools.rs  http_server_dispatch.rs  mod.rs  response_cache.rs
streams-tools/src/explorer/: app_state.rs  error.rs  explorer.rs  mod.rs  router.rs  sync_channels_loop.rs  threading_helpers.rs
streams-tools/src/explorer/decode/: decode_controller.rs  decode_router.rs  mod.rs
streams-tools/src/explorer/messages/: messages_controller.rs  messages_dto.rs  messages_router.rs  messages_service.rs  mod.rs
streams-tools/src/explorer/nodes/: mod.rs  nodes_controller.rs  nodes_dto.rs  nodes_router.rs  nodes_service.rs
streams-tools/src/explorer/payload/: mod.rs  payload_controller.rs  payload_dto.rs  payload_router.rs  payload_service.rs
streams-tools/src/explorer/shared/: mod.rs  page_dto.rs
streams-tools/src/http/: http_dispatch_scope.rs  http_protocol_command.rs  http_protocol_confirm.rs  http_protocol_lorawan_node.rs  http_protocol_lorawan_rest.rs  http_protocol_streams.rs  http_server_dispatch.rs  http_server_process_finally.rs  http_tools.rs  iota_bridge_error.rs  mod.rs
streams-tools/src/iota_bridge/: buffered_message_loop.rs  dispatch_scope.rs  error_handling_strategy.rs  fifo_queue.rs  helpers.rs  iota_bridge.rs  mod.rs  server_dispatch_command.rs  server_dispatch_confirm.rs  server_dispatch_lorawan_node.rs  server_dispatch_lorawan_rest.rs  server_dispatch_streams.rs  server_process_finally.rs  streams_node_health.rs  streams_node_health_https_client.rs  streams_transport_no_tangle.rs  streams_transport_pool.rs
streams-tools/src/iota_bridge/dao/: buffered_message.rs  client.rs  lora_wan_node.rs  mod.rs  pending_request.rs
streams-tools/src/remote/: command_processor.rs  mod.rs  remote_sensor.rs
streams-tools/src/streams_transport/: mod.rs  streams_transport.rs  streams_transport_capture.rs  streams_transport_file.rs  streams_transport_socket.rs
streams-tools/src/user_manager/: channel_manager.rs  compressed_state.rs  message_indexer.rs  message_manager.rs  mod.rs  multi_channel_management.rs  subscriber_manager.rs  user_data_store.rs
streams-tools/src/user_manager/dao/: message.rs  mod.rs  user.rs
streams-tools/src/wallet/: dummy_wallet.rs  mod.rs  plain_text_wallet.rs  simple_wallet.rs
susee-tools/: Cargo.toml
susee-tools/src/: cli_base.rs  helpers.rs  lib.rs
test/payloads/: Cargo.toml  lib.rs  meter_reading-1-compact.json  meter_reading-1.json
(+73 files in other folders)
