[workspace]
members = [
    "management-console",
    "tangle-proxy",
    "streams-tools",
    "susee-tools",
    "iota-client-types",
    "sensor/sensor-lib",
    "sensor/main-rust",
    # optional members (not included in default-members - see below)
    "sensor/main-rust-esp-rs",
    "sensor/main-rust-pio",
    "test/payloads",
]

default-members = [
    "management-console",
    "tangle-proxy",
    "streams-tools",
    "susee-tools",
    "iota-client-types",
    "sensor/sensor-lib",
    "sensor/main-rust",
]

exclude = [
    "sensor/streams-poc-lib/components/streams-poc-lib",
]

resolver = "2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom", package = "getrandom", branch="0.1"}
getrandom = { version = "0.2", git = "https://github.com/rust-random/getrandom.git" }
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
time = { version = "=0.3.4", git = "https://github.com/time-rs/time", rev="8ec5f4ef2f63321b3dbbec3b4a6c4001fdf26de6" }
iota-crypto = { version = "0.9.1", git = "https://github.com/iotaledger/crypto.rs.git", rev="6840d43f98ad1a991571268f7a9543025200ca4f" }

#[patch."https://github.com/iotaledger/streams"]
#iota-streams = { version = "0.1.2", path = "../../iotaledger/streams" }
