[package]
name = "app-srv-connector-mock"
version = "0.1.2"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
streams-tools = { version = "0.1.2", path = "../streams-tools" }
susee-tools = { version = "0.1.2", path = "../susee-tools" }
anyhow = "1.0.40"
tokio = {version = "1.5"}
hyper = { version = "0.14", features = ["full"] }
hex-literal = "0.3.4"
env_logger = "0.9"
log = { version = "0.4" }

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std"]