[package]
name = "iota-bridge"
version = "0.1.2"
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
streams-tools = { version = "0.1.2", path = "../streams-tools", features = ["iota_bridge"] }
susee-tools = { version = "0.1.2", path = "../susee-tools" }
rusqlite = { version = "0.28.0", features = ["bundled"] }

anyhow = "1.0.40"
tokio = {version = "1.5"}
hyper = { version = "0.14", features = ["full"] }
hex-literal = "0.3.4"
env_logger = "0.9"

[dependencies.iota-streams]
git = "https://github.com/iotaledger/streams"
branch="v1"

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std"]