[package]
name = "iota-client-types"
version = "0.1.2"
edition = "2018"
license = "All rights reserved"
keywords = ["iota", "susee"]
description = "All types from iota-client and iota-streams library that are needed to persist and read iota packages"

[lib]
name = "iota_client_types"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
bee-message = { version  = "0.1.6", default-features = false, features = ["serde"] }
bee-rest-api = { version = "0.1.7", default-features = false }

[dependencies.iota-streams-core]
git = "https://github.com/chrisgitiota/streams"
branch="v1"
package="iota-streams-core"
default-features = false

[dependencies.lets]
git = "https://github.com/chrisgitiota/streams"
branch="stardust"
default-features = false