[package]
name = "streams-tools"
version = "0.1.2"
edition = "2018"
license = "Apache-2.0/MIT"
keywords = ["iota", "streams"]
description = "Tools to facilitate usage of iota streams"

[lib]
name = "streams_tools"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.8", default-features = false, features = ["executor"] }
anyhow = "1.0.40"
rand = "0.7.3"
url = "2.2.2"
hyper = { version = "0.14", features = ["client", "http1"] }
iota-client-types = { version = "0.1.2", path = "../iota-client-types" }
log = { version = "0.4" }
bitflags = "1.3.2"
base64 = "0.21.0"

# smol_rt dependencies
smol = { version = "1.2", optional = true }

# esp_idf dependencies
esp-idf-svc = { version = "0.45.0", optional = true }
esp-idf-sys = { version = "0.32.1", optional = true }
embedded-svc = { version = "0.24.0", optional = true }

# std dependencies
tokio = { version = "1.28", optional = true }

# iota_bridge dependencies
serde_json = { version = "1.0.96", optional = true }  # also used for explorer
dashmap = { version = "5.4.0", optional = true }

# dao dependencies
rusqlite = { version = "0.29", features = ["bundled"], optional = true } # , "serde_json"
serde = {version = "1.0.147", default-features = false, features = ["derive"], optional = true}
serde_rusqlite = { version = "0.33", git = "https://github.com/twistedfall/serde_rusqlite", branch="master", optional = true }
fallible-streaming-iterator = {version = "0.1.9", optional = true}

# explorer dependencies
axum = { version = "0.6.18", optional = true, features=["macros"] }
tower = { version = "0.4", optional = true, features = ["util"] }
tower-http = { version = "0.4", optional = true, features = ["cors", "trace"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["std", "env-filter"] }
utoipa = { version = "3.3", optional = true, features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1", optional = true, features = ["axum"] }

[dependencies.iota-streams]
git = "https://github.com/chrisgitiota/streams"
branch="v1"
default-features = false
features = ["std", "tangle"]

[features]
default = ["std"]
smol_rt = ["smol"]
esp_idf = ["embedded-svc", "esp-idf-svc", "esp-idf-sys"]
dao = ["rusqlite", "serde", "serde_rusqlite", "fallible-streaming-iterator"]
std = ["tokio", "iota-streams/client", "iota-streams/std"]
iota_bridge = ["dao", "serde_json", "dashmap"]
explorer = ["dao", "axum", "tower", "tower-http", "tracing", "tracing-subscriber", "serde_json", "utoipa", "utoipa-swagger-ui"]
