[package]
name = "susee-tools"
version = "0.1.2"
edition = "2018"
license = "All rights reserved"
keywords = ["iota", "susee"]
description = "Tools to facilitate usage of iota streams for the Susee project"

[lib]
name = "susee_tools"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streams-tools = { version = "0.1.2", path = "../streams-tools", default-features = false }
anyhow = "1.0.40"

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std"]

[features]
default = ["std"]
smol_esp_rs = ["streams-tools/smol_esp_rs"]
std = ["streams-tools/std"]