[package]
name = "main-rust-esp-rs"
version = "0.1.0"
authors = ["chrisgitiota <christof.gerritsma@iota.org>"]
edition = "2018"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc = { version = "0.42.0", features = ["experimental"] }
smol = { version = "1.2"}
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop", default-features = false, features = ["std", "tangle"] }
streams-tools = { version = "0.1.2", path = "../../streams-tools", default-features = false, features=["smol_rt", "esp_idf"] }
sensor-lib = { version = "0.1.2", path = "../sensor-lib", default-features = false, features = ["smol_rt", "esp_idf", "wifi"] }
log = "0.4"
anyhow = "1.0.40"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
