[package]
name = "main-rust-esp-rs"
version = "0.1.0"
authors = ["chrisgitiota <christof.gerritsma@iota.org>"]
edition = "2018"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "0.45.0", features = ["experimental"] }
smol = { version = "1.2"}
streams-tools = { version = "0.1.2", path = "../../streams-tools", default-features = false, features=["smol_rt", "esp_idf"] }
sensor-lib = { version = "0.1.2", path = "../sensor-lib", default-features = false, features = ["smol_rt", "esp_idf"] }
log = "0.4"
anyhow = "1.0.40"

[dependencies.streams]
git = "https://github.com/chrisgitiota/streams"
branch="stardust"
default-features = false
features = ["tangle-client"]

[build-dependencies]
embuild = "0.28"
anyhow = "1"
