[package]
name = "main-rust-pio"
edition = "2021"
version = "0.1.0"
authors = []
keywords = []
categories = []
autobins = true
autoexamples = true
autotests = true
autobenches = true
publish = true

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc = "0.41.4"
smol = { version = "1.2"}
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop", default-features = false, features = ["std", "tangle"] }
streams-tools = { version = "0.1.2", path = "../../streams-tools", default-features = false, features=["smol_rt", "esp_idf"] }
sensor-lib = { version = "0.1.2", path = "../sensor-lib", default-features = false, features = ["smol_rt", "esp_idf"] }
log = "0.4"
anyhow = "1.0.40"

[dev-dependencies]

[build-dependencies]

[target]

[features]

[patch]

[lib]
path = "src/lib.rs"
name = "main_rust_pio"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[badges.maintenance]
status = "none"
