[package]
name = "sensor"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sensor"
path = "src/main.rs"

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop", default-features = false, features = ["std", "tangle", "client"] }
streams-tools = { version = "0.1.2", path = "../../streams-tools" }
susee-tools = { version = "0.1.2", path = "../../susee-tools" }
sensor-lib = { version = "0.1.2", path = "../sensor-lib" }
anyhow = "1.0.40"
tokio = {version = "1.5"}

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std"]