[package]
name = "sensor"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sensor"
path = "src/main.rs"

[dependencies]
streams-tools = { version = "0.1.2", path = "../../streams-tools" }
susee-tools = { version = "0.1.2", path = "../../susee-tools" }
sensor-lib = { version = "0.1.2", path = "../sensor-lib" }
anyhow = "1.0.40"
tokio = {version = "1.5"}
env_logger = "0.9"

[dependencies.streams]
git = "https://github.com/chrisgitiota/streams"
branch="stardust"
default-features = false
features = ["tangle-client"]

[dependencies.clap]
version = "3.0.14"
default-features = false
features = ["std"]