[package]
name = "sensor-lib"
version = "0.1.2"
edition = "2018"
license = "All rights reserved"
keywords = ["iota", "susee"]
description = "All sensor specific code to be linked in rust or C projects"

[lib]
name = "sensor_lib"
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "tokio",
    "clap",
    "rand",
    "streams-tools/std",
    "susee-tools/std",
    "streams/tangle-client",
]
smol_rt = [
    "smol",
    "streams-tools/smol_rt",
    "susee-tools/smol_rt",
    "payloads",
    "futures-lite"
]

esp_idf = [
    "esp-idf-sys",
    "esp-idf-svc",
    "embedded-svc",
    "esp-idf-hal",
    "cty",
    "streams-tools/esp_idf",
    "susee-tools/esp_idf",
]

tokio_test = [
    "tokio/macros",
    "tokio/rt",
    "tokio/time",
    "cty",
]

[dependencies]
# bindgen = "0.58"
# cbindgen = "0.19"
streams-tools = { version = "0.1.2", path = "../../streams-tools", default-features = false }
susee-tools = { version = "0.1.2", path = "../../susee-tools", default-features = false }
iota-client-types = { version = "0.1.2", path = "../../iota-client-types" }
anyhow = "1.0.40"
hyper = { version = "0.14", features = ["client", "http1"] }
log = { version = "0.4" }
async-trait = {version = "0.1", default-features = false}

# esp_idf dependencies
esp-idf-sys = { version = "0.32.1", optional = true }
esp-idf-svc = { version = "0.45.0", optional = true }
esp-idf-hal = { version = "0.40.1", optional = true }
embedded-svc = { version = "0.24.0", optional = true }
cty = { version = "0.2.2", optional = true }

# smol_rt dependencies
smol = { version = "1.2", optional = true}
futures-lite = { version = "1.12.0", optional = true }
payloads = { version = "0.1.2", path = "../../test/payloads", optional = true }

# std dependencies
tokio = {version = "1.5", optional = true}
rand = {version = "0.7.3", optional = true}

[dependencies.streams]
git = "https://github.com/chrisgitiota/streams"
branch="stardust"
default-features = false
features = ["tangle-client"]

[dependencies.clap]
version = "3.0.14"
optional = true
default-features = false
features = ["std"]