[package]
name = "payloads"
version = "0.1.2"
edition = "2018"
license = "All rights reserved"
keywords = ["iota", "susee"]
description = "Payloads for tests with sensor app (on x86 and embedded devies) for the Susee project"

[lib]
name = "payloads"
crate-type = ["rlib"]
path= "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
