[package]
name = "rustlib"
version = "0.1.0"
authors = ["Espressif Systems CO LTD", "June Life Inc"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# esp-idf-sys = { version = "0.30.6", default-features = false, features = ["std"] }
# esp-idf-svc = "=0.37.2"
smol = { version = "1.2"}
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop", default-features = false, features = ["std", "tangle"] }
streams-tools = { version = "0.1.2", path = "../../../../streams-tools", default-features = false, features=["smol_rt"] }
sensor-lib = { version = "0.1.2", path = "../../../sensor-lib", default-features = false, features = ["smol_rt"] }
log = "0.4"
anyhow = "1.0.40"


[build-dependencies]
bindgen = "0.58"
cbindgen = "0.19"

[features]
std = []

[profile.dev]
# Optimization level 1 is similar to "g" in gcc/clang, although for some reason
# Cargo doesn't support that flag.
#opt-level = 1
opt-level = "s"

[profile.release]
debug = true
opt-level = "z"
#debug = true
#lto = true
#opt-level = "z"
#codegen-units = 1
#panic = "abort"

[patch.crates-io]
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom1 = { version = "0.1.16", git = "https://github.com/rust-random/getrandom.git", package = "getrandom", tag = "v0.1.16" }
getrandom1 = { version = "0.1", path = "../../../../../getrandom", package = "getrandom"}
getrandom = { version = "0.2", git = "https://github.com/rust-random/getrandom.git" }
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
